3.5.34~nightly1
- Meldung Resolve URL Update
- neues Icon und Fanart
- Update Manager fixed

3.5.33
  15.05.2022
  Update:
- UpdateManager ResolveURL hinzugefügt
- settings.xml überarbeitet
- readme überarbeitet
- [xcine] add site

3.5.32
   05.05.2022
   Update:
 - Serienstream: Menüpunkte Suche und Alle Serien wieder hinzugefügt bei Auswahl des Proxies
 - Update kinox
 - [kinoger] add hoster kinoger.pw
 - [kinox] add auto domain check
 - [general] Meldung bei nicht funktionierenden ResolveUrl
 - [requestHandler] diverse Optimierungen
 - [requestHandler] Zensurmeldung "Anleitung"
 - Fix Serienstream Eintrag Alle Serien
 - Fix kkiste, movie4click invalid hosters  (thx @dxsdev0)
 - Update Flimmerstube
 - settings.xml update
 - Update kkiste domian  (thx @heptamer)
 - SSL Fix (thx @heptamer)
 - HD Filme.top (thx @heptamer)
 - Update kinox settings.xml
 - Update movie4k domain
 
   Neue: 
 - kinomax.me
 
  Entfernt:
 - movie4k.space 
 - xCine
 - Pureanime
 - Movietown
 
3.5.31
- Restart nach xStream Shut Down
- xStream Stand 3.5.29

3.5.29
- Update kinox

3.5.28~nightly4
  12.01.2022
 - xcine deaktiviert (SITE_GLOBAL_SEARCH)
 - fix megakino  - thx betegeuse46
 - add kinokiste.tech  - thx betegeuse46
 - guiElements extended -  thx betegeuse46
 - edit gui.py
 - Update README.md

3.5.27
  30.12.2021
 - wechsel von UrlResolver zu resolveUrl
 - remove hdfilme & hdstreams.org
 - add anicloud

3.5.26
  27.11.2021
- fix thumbnails in Serienstream
- edit GUI

3.5.25
 02.11.2021
- Versionsnumer für URLResolver in die addon.xml hinzugefügt

3.5.24
  29.10.2021
- Bugfix falscher Tokken

3.5.23
  28.10.2021
- neuen URLResolver tokken erstellt
- [Serienstream] IP anstatt Domainname
- [alleserien] entfernt
- [kinoger] fix hoster protonvideo und kinoger
- [kinox] fix thevideo
- [movieking] Seite hinzugefügt
- [flimmerstube] Seite hinzugefügt
- [kinoger] wieder hinzugefügt

3.5.22
  19.05.2021
- [kinoag] entfernt
- [kinoger] entfernt
- fix Kodi-19-Favoriten-Thumbnails Problem